--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <main id="root"></main>
+    <main id="root" class="dark"></main>
   </body>
 </html>
